--- a/sob3_ru/evenement_ru_3.css
+++ b/sob3_ru/evenement_ru_3.css
@@ -45,70 +45,100 @@
 }
 
 .menu {
-  background-color: #F39C12;
+  background: #F39C12;
   position: fixed;
-  z-index: 20;
-  width: 1900px;
-  height: 70px;
+  width: 100%;
+  z-index: 1000;
 }
-.menu .logo_for_menu {
+
+.menu a {
+  text-decoration: none;
+}
+
+.menu nav {
+  position: relative;
+  display: flex;
+  margin: 0 auto;
+  height: 70px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav .content {
+  display: flex;
+}
+
+nav .content .links {
+  margin-left: 80px;
+  display: flex;
+}
+
+.logph {
   width: 70px;
   height: 50px;
   margin-left: 350px;
   margin-top: 10px;
 }
-.menu ul {
+
+.content .links li {
   list-style: none;
-  font-family: "Comfortaa";
-  display: flex;
+  line-height: 70px;
+}
+
+.content .links li a,
+.content .links li label {
+  color: #fff;
   font-size: 20px;
-  margin-left: 400px;
-  margin-top: -40px;
-  padding-bottom: 20px;
-  /*block for language*/
-}
-.menu ul li {
-  margin-left: 50px;
-}
-.menu ul a {
-  text-decoration: none;
-  color: white;
-}
-.menu ul button {
-  color: white;
-  border: none;
-  background-color: #F39C12;
+  font-weight: 500;
+  padding: 9px 17px;
+  border-radius: 5px;
   font-family: "Comfortaa";
-  font-size: 20px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  border-radius: 50px;
-  padding: 10px 15px 10px 15px;
-  margin-top: -10px;
-  cursor: pointer;
+  transition: all 0.3s ease;
 }
-.menu ul ul {
-  margin-left: -180px;
-  margin-top: 46px;
-  position: absolute;
-  display: inline-block;
+
+.content .links li label {
   display: none;
 }
-.menu ul ul li a {
-  text-decoration: none;
-  color: white;
-  background-color: #F39C12;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  width: 130px;
-  text-align: center;
-  display: inline-block;
+
+.content .links .hover:hover a {
+  color: #e91e63;
+  transition: 1.5s ease-in-out;
+  background-color: white;
 }
-.menu ul ul li a:hover {
-  color: white;
-  background-color: #e91e63;
+
+.menu .menu-icon {
+  display: none;
 }
-.menu ul menu ul li:hover ul {
+
+.menu input[type=checkbox] {
+  display: none;
+}
+
+.content .links ul {
+  position: absolute;
+  background: #f39c12;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.content .links li:hover > ul {
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease;
+}
+
+.content .links ul li a {
   display: block;
+  width: 100%;
+  line-height: 30px;
+  border-radius: 0px !important;
+}
+
+.content .links ul li a:hover {
+  color: #e91e63;
+  background-color: white;
 }
 
 .cirqle {
@@ -309,65 +339,95 @@ header .secret::selection {
   color: black;
 }
 
+/*footer start*/
 footer {
   background-color: #282323;
   height: 500px;
   margin-top: 0px;
+  position: absolute;
+  width: 1688px;
 }
+
 footer .block_img img {
   margin-left: 40px;
   height: 90px;
   margin-top: 200px;
 }
+
 footer .text .block_menu {
   margin-left: 200px;
   font-family: "Open_Sans";
   margin-top: -260px;
   text-shadow: 0 0 10px #FF8C00, 0 0 20px #FF8C00, 0 0 40px #FF8C00, 0 0 80px #FF8C00, 0 0 120px #FF8C00;
 }
+
 footer .text .block_menu li {
   display: inline;
   font-size: 40px;
 }
+
 footer .text .block_menu li .help {
   padding-right: 220px;
 }
+
 footer .text .block_menu li .contacts {
   padding-left: 160px;
   padding-right: 200px;
 }
+
 footer .text .block_menu li a {
   text-decoration: none;
   color: white;
 }
+
 footer .text .block_for_help {
   margin-left: 200px;
   margin-top: 50px;
   font-family: "Raleway";
   font-size: 18px;
 }
+
 footer .text .block_for_help li {
   list-style-type: none;
   padding-bottom: 30px;
 }
+
 footer .text .block_for_help a {
   text-decoration: none;
   color: white;
+  transition: margin-left 1s;
 }
+
+footer .text .block_for_help a:hover {
+  color: #ff8c00;
+  margin-left: 20px;
+  transition: margin-left 1s;
+}
+
 footer .text .block_for_menu {
   margin-left: 590px;
   margin-top: -360px;
   font-family: "Raleway";
   font-size: 20px;
 }
+
 footer .text .block_for_menu li {
   list-style-type: none;
   padding-bottom: 30px;
 }
+
 footer .text .block_for_menu a {
   text-decoration: none;
   color: white;
+  transition: margin-left 1s;
 }
+
+footer .text .block_for_menu a:hover {
+  color: #ff8c00;
+  margin-left: 20px;
+  transition: margin-left 1s;
+}
+
 footer .text .block_for_adress .adress {
   color: white;
   font-family: "Raleway";
@@ -375,156 +435,215 @@ footer .text .block_for_adress .adress {
   margin-left: 830px;
   margin-top: -320px;
 }
+
+footer .text .block_for_adress .adress a {
+  color: white;
+  transition: margin-left 1s;
+}
+
+footer .text .block_for_adress .adress a:hover {
+  color: #ff8c00;
+  margin-left: 20px;
+  transition: margin-left 1s;
+}
+
 footer .text .block_for_adress .amail {
   margin-top: 30px;
   font-family: "Raleway";
   font-size: 25px;
   margin-left: 899px;
 }
+
 footer .text .block_for_adress .amail a {
   text-decoration: none;
+  transition: margin-left 1s;
+  color: white;
 }
+
+footer .text .block_for_adress .amail a:hover {
+  color: #ff8c00;
+  margin-left: 20px;
+  transition: margin-left 1s;
+}
+
+footer .text .block_with_img_link {
+  width: 200px;
+}
+
 footer .text .block_with_img_link .instagram {
   width: 50px;
   margin-left: 920px;
   margin-top: 50px;
   margin-right: 20px;
-}
-footer .text .block_with_img_link .facebook {
-  width: 50px;
-  margin-right: 20px;
-}
-footer .text .block_with_img_link .telega {
-  width: 50px;
-}
-footer .text .block_with_img_link .gmail_youtube .gmail {
-  width: 110px;
-  margin-top: 20px;
-  margin-left: 910px;
-}
-footer .text .block_with_img_link .gmail_youtube .youtube {
-  width: 80px;
-}
-footer .text .block_with_img {
   position: absolute;
 }
+
+footer .text .block_with_img_link .facebook {
+  width: 50px;
+  margin-left: 1010px;
+  margin-top: 50px;
+  position: absolute;
+}
+
+footer .text .block_with_img_link .telega {
+  width: 50px;
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 1090px;
+}
+
+footer .text .block_with_img_link .gmail_youtube .gmail {
+  width: 110px;
+  margin-top: 120px;
+  margin-left: 934px;
+  position: absolute;
+}
+
+footer .text .block_with_img_link .gmail_youtube .youtube {
+  width: 80px;
+  position: absolute;
+  margin-top: 125px;
+  margin-left: 1040px;
+}
+
+footer .text .block_with_img {
+  position: absolute;
+  width: 200px;
+}
+
 footer .text .block_with_img .Uk {
   margin-left: 1410px;
-  margin-top: -280px;
+  margin-top: -90px;
 }
+
 footer .text .block_with_img .Uk .uk {
   width: 80px;
 }
+
 footer .text .block_with_img .Ra {
   margin-left: 1410px;
   margin-top: 20px;
 }
+
 footer .text .block_with_img .Ra .ra {
   width: 80px;
 }
+
 footer .text .block_with_img .Usa {
   margin-left: 1410px;
   margin-top: 20px;
 }
+
 footer .text .block_with_img .Usa .usa {
   width: 80px;
 }
+
 footer .text .block_with_img .Fr {
   margin-left: 1410px;
   margin-top: 20px;
 }
+
 footer .text .block_with_img .Fr .fr {
   width: 80px;
 }
+
 footer .text .block_with_img .Ch {
   margin-left: 1410px;
   margin-top: 20px;
 }
+
 footer .text .block_with_img .Ch .ch {
   width: 80px;
   z-index: 10;
   position: absolute;
 }
+
 footer .line_1 {
-  transform: skew(0deg, -60deg);
-  background-color: #282323;
-  width: 70px;
-  height: 200px;
-  margin-top: -35px;
-  position: absolute;
-  margin-left: 1618px;
-  position: absolute;
   z-index: 0;
+  width: 0px;
+  height: 0px;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 160px solid #282323;
+  margin-left: 1548.4px;
+  margin-top: 270px;
 }
+
 footer .line_2 {
-  background-color: #282323;
-  width: 70px;
-  height: 200px;
-  transform: skew(0deg, 60deg);
-  margin-left: 1548px;
-  margin-top: -36px;
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 150px solid transparent;
+  border-right: 150px solid transparent;
+  border-top: 100px solid #282323;
+  margin-left: 1310px;
+  margin-top: -170px;
 }
-footer .line_3 {
-  background-color: #282323;
-  transform: skew(0, -40deg);
-  width: 110px;
-  height: 110px;
-  margin-left: 1450px;
-  margin-top: -130px;
+
+footer .block_about_cite {
+  margin-top: -100px;
   position: absolute;
 }
-footer .line_4 {
-  background-color: #282323;
-  transform: skew(0, 40deg);
-  width: 150px;
-  height: 110px;
-  margin-left: 1300px;
-  margin-top: -147px;
-}
+
 footer .block_about_cite p {
   font-size: 35px;
   margin-left: 50px;
   font-family: "Poiret_One";
 }
+
 footer .block_about_cite .insta {
   margin-left: 350px;
   position: absolute;
 }
+
 footer .block_about_cite .insta img {
   height: 50px;
   margin-top: -50px;
 }
+
 footer .block_about_cite .telega_oleksandr {
   margin-left: 430px;
   position: absolute;
 }
+
 footer .block_about_cite .telega_oleksandr img {
   height: 50px;
   margin-top: -55px;
 }
+
 footer .block_about_cite .telega_Aahzmandiuss {
   position: absolute;
   margin-left: 510px;
 }
+
 footer .block_about_cite .telega_Aahzmandiuss img {
   height: 50px;
   margin-top: -55px;
 }
+
 footer .block_about_cite .telega_Dana {
   position: absolute;
   margin-left: 590px;
 }
+
 footer .block_about_cite .telega_Dana img {
   height: 50px;
   margin-top: -55px;
 }
-footer .arrow {
+
+footer .back_to_top_btn {
   position: absolute;
   z-index: 0;
+  border: none;
 }
-footer .arrow img {
-  margin-top: -70px;
+
+footer .back_to_top_btn:focus {
+  border: none;
+}
+
+footer .back_to_top_btn .photo {
+  margin-top: -150px;
   height: 80px;
   position: absolute;
-  margin-left: 1585px;
+  margin-left: 1590px;
 }
