--- a/evennement_фр/evennement.css
+++ b/evennement_фр/evennement.css
@@ -49,7 +49,6 @@
 * {
   margin: 0px;
   padding: 0px;
-  user-select: none;
 }
 
 .menu {
@@ -669,17 +668,17 @@ footer .block_about_cite .telega_Dana img {
   margin-top: -55px;
 }
 
-footer .back-to-top-btn {
+footer .back_to_top_btn {
   position: absolute;
   z-index: 0;
   border: none;
 }
 
-footer .back-to-top-btn:focus {
+footer .back_to_top_btn:focus {
   border: none;
 }
 
-footer .back-to-top-btn .photo {
+footer .back_to_top_btn .photo {
   margin-top: -150px;
   height: 80px;
   position: absolute;
