--- a/contacts.css
+++ b/contacts.css
@@ -83,8 +83,6 @@
 * {
   margin: 0px;
   padding: 0px;
-  -webkit-user-select: none;
-          user-select: none;
 }
 
 .menu {
@@ -211,7 +209,7 @@ header .block_for_youtube {
 header .block_for_youtube .sucscrib {
   font-family: "BalsamiqSans-Bold";
   font-size: 50px;
-  margin-left: 500px;
+  margin-left: 450px;
   padding-top: 30px;
 }
 header .block_for_youtube .sucscrib a {
@@ -231,7 +229,7 @@ header .block_for_youtube .YouTube a {
 header .block_for_youtube .nouvell {
   font-family: "BalsamiqSans-Bold";
   font-size: 30px;
-  margin-left: 450px;
+  margin-left: 500px;
   margin-top: 30px;
 }
 header .block_for_youtube .nouvell a {
@@ -239,7 +237,7 @@ header .block_for_youtube .nouvell a {
   text-decoration: none;
 }
 header .block_for_youtube .observer {
-  margin-left: 770px;
+  margin-left: 800px;
   margin-top: 20px;
   font-size: 30px;
   font-family: "Caveat";
@@ -274,7 +272,7 @@ main .instagram button {
   font-size: 40px;
   padding: 0px 15px 0px 10px;
   font-family: "Caveat";
-  margin-left: 1310px;
+  margin-left: 1210px;
   height: 30px;
   margin-top: -50px;
   position: absolute;
@@ -332,7 +330,7 @@ main .instagram .instagram_block_for_foto .бабушка_8 {
 }
 main .telegram {
   background-color: #E0FFFF;
-  height: 1550px;
+  height: 1500px;
   width: 1688px;
 }
 main .telegram .header-telegram p {
@@ -347,7 +345,7 @@ main .telegram .header-telegram button {
   font-size: 40px;
   padding: 0px 15px 0px 10px;
   font-family: "Caveat";
-  margin-left: 1310px;
+  margin-left: 1210px;
   position: absolute;
   height: 30px;
   margin-top: -50px;
@@ -432,7 +430,7 @@ main .telegram .a_for_fifferent_channel .volunteers button {
   height: 30px;
   position: absolute;
   z-index: 0;
-  margin-left: 1275px;
+  margin-left: 1285px;
   margin-top: -90px;
 }
 main .telegram .a_for_fifferent_channel .volunteers button a {
@@ -459,7 +457,7 @@ main .telegram .a_for_fifferent_channel .news button {
   height: 30px;
   position: absolute;
   z-index: 0;
-  margin-left: 1170px;
+  margin-left: 1110px;
   margin-top: -200px;
 }
 main .telegram .a_for_fifferent_channel .news button a {
@@ -486,7 +484,7 @@ main .telegram .a_for_fifferent_channel .ChatBot button {
   height: 30px;
   position: absolute;
   z-index: 0;
-  margin-left: 1200px;
+  margin-left: 1104px;
   margin-top: -185px;
 }
 main .telegram .a_for_fifferent_channel .ChatBot button a {
@@ -511,7 +509,7 @@ main .telegram .a_for_fifferent_channel .volunteers_lviv button {
   height: 30px;
   position: absolute;
   z-index: 0;
-  margin-left: 1275px;
+  margin-left: 1300px;
   margin-top: -40px;
 }
 main .telegram .a_for_fifferent_channel .volunteers_lviv button a {
@@ -621,7 +619,7 @@ main .facebook .block_main .first_block_main button {
   font-size: 40px;
   padding: 0px 15px 0px 10px;
   font-family: "Caveat";
-  margin-left: 1250px;
+  margin-left: 1180px;
   margin-top: -90px;
   position: absolute;
   z-index: 0;
@@ -648,7 +646,7 @@ main .facebook .block_main .second_block_main button {
   font-size: 40px;
   padding: 0px 15px 0px 10px;
   font-family: "Caveat";
-  margin-left: 1375px;
+  margin-left: 1335px;
   margin-top: -95px;
   position: absolute;
   z-index: 0;
@@ -690,7 +688,7 @@ main .facebook .footer .block_and:hover .and span {
   display: none;
 }
 main .facebook .footer .block_and:hover .and:after {
-  content: "#acquise:V er de terre de bibliothèque";
+  content: "#получен навык: Супер книжный червь";
 }
 main .facebook .footer .amail {
   text-align: center;
@@ -705,7 +703,7 @@ main .facebook .footer .amail a {
 footer {
   background-color: #282323;
   height: 500px;
-  margin-top: 490px;
+  margin-top: 470px;
   position: absolute;
   width: 1688px;
 }
@@ -732,16 +730,9 @@ footer .text .block_menu li .help {
   padding-right: 220px;
 }
 
-footer .text .block_menu li .menu1 {
-  padding-left: 90px;
-}
-
 footer .text .block_menu li .contacts {
-  padding-left: 150px;
-}
-
-footer .text .block_menu li .languages {
-  padding-left: 120px;
+  padding-left: 160px;
+  padding-right: 200px;
 }
 
 footer .text .block_menu li a {
@@ -774,7 +765,7 @@ footer .text .block_for_help a:hover {
 }
 
 footer .text .block_for_menu {
-  margin-left: 615px;
+  margin-left: 590px;
   margin-top: -360px;
   font-family: "Raleway";
   font-size: 20px;
@@ -801,7 +792,7 @@ footer .text .block_for_adress .adress {
   color: white;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 855px;
+  margin-left: 830px;
   margin-top: -320px;
 }
 
@@ -820,7 +811,7 @@ footer .text .block_for_adress .amail {
   margin-top: 30px;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 925px;
+  margin-left: 899px;
 }
 
 footer .text .block_for_adress .amail a {
@@ -841,7 +832,7 @@ footer .text .block_with_img_link {
 
 footer .text .block_with_img_link .instagram {
   width: 50px;
-  margin-left: 930px;
+  margin-left: 920px;
   margin-top: 50px;
   margin-right: 20px;
   position: absolute;
@@ -849,7 +840,7 @@ footer .text .block_with_img_link .instagram {
 
 footer .text .block_with_img_link .facebook {
   width: 50px;
-  margin-left: 1025px;
+  margin-left: 1010px;
   margin-top: 50px;
   position: absolute;
 }
@@ -858,13 +849,13 @@ footer .text .block_with_img_link .telega {
   width: 50px;
   position: absolute;
   margin-top: 50px;
-  margin-left: 1105px;
+  margin-left: 1090px;
 }
 
 footer .text .block_with_img_link .gmail_youtube .gmail {
   width: 110px;
   margin-top: 120px;
-  margin-left: 945px;
+  margin-left: 934px;
   position: absolute;
 }
 
@@ -872,7 +863,7 @@ footer .text .block_with_img_link .gmail_youtube .youtube {
   width: 80px;
   position: absolute;
   margin-top: 125px;
-  margin-left: 1055px;
+  margin-left: 1040px;
 }
 
 footer .text .block_with_img {
@@ -1010,7 +1001,7 @@ footer .back-to-top-btn:focus {
   border: none;
 }
 
-footer .back-to-top-btn .photo {
+footer .back-to-top-btn img {
   margin-top: -150px;
   height: 80px;
   position: absolute;
