--- a/contacts.scss
+++ b/contacts.scss
@@ -104,7 +104,6 @@
 *{
 	margin: 0px;
 	padding: 0px;
-  user-select: none;
 }
 .menu{
   background: #F39C12;
@@ -217,7 +216,7 @@ header{
 		.sucscrib{
 			font-family: "BalsamiqSans-Bold";  
 			font-size: 50px;
-			margin-left: 500px;
+			margin-left: 450px;
 			padding-top: 30px;
 			a{
 				color: black;
@@ -237,7 +236,7 @@ header{
 		.nouvell{
 			font-family: "BalsamiqSans-Bold";  
 			font-size: 30px;
-			margin-left: 450px;
+			margin-left: 500px;
 			margin-top: 30px;
 			a{
 				color: black;
@@ -245,7 +244,7 @@ header{
 			}
 		}
 		.observer{
-			margin-left: 770px;
+			margin-left: 800px;
 			margin-top: 20px;
 			font-size: 30px;
 			font-family: "Caveat";
@@ -279,7 +278,7 @@ main{
 			font-size: 40px;
 			padding:0px 15px 0px 10px;
 			font-family: "Caveat";
-			margin-left: 1310px;
+			margin-left: 1210px;
 			height: 30px;
 			margin-top: -50px;
 			position: absolute;
@@ -341,7 +340,7 @@ main{
 /*telegram*/
    .telegram{
    	background-color: #E0FFFF;
-   	height: 1550px;
+   	height: 1500px;
    	width: 1688px;
    	.header-telegram{
    		p{
@@ -356,7 +355,7 @@ main{
    			font-size: 40px;
    			padding: 0px 15px 0px 10px;
             font-family: "Caveat";
-            margin-left: 1310px;
+            margin-left: 1210px;
             position: absolute;
             height: 30px;
             margin-top: -50px;
@@ -444,7 +443,7 @@ main{
                height: 30px;
                position: absolute;
                z-index: 0;
-               margin-left: 1275px;
+               margin-left: 1285px;
                margin-top: -90px;
    				a{
    					text-decoration: none;
@@ -473,7 +472,7 @@ main{
                height: 30px;
                position: absolute;
                z-index: 0;
-               margin-left: 1170px;
+               margin-left: 1110px;
                margin-top: -200px;
    				a{
    					text-decoration: none;
@@ -502,7 +501,7 @@ main{
                height: 30px;
                position: absolute;
                z-index: 0;
-               margin-left: 1200px;
+               margin-left: 1104px;
                margin-top: -185px;
    				a{
    					text-decoration: none;
@@ -529,7 +528,7 @@ main{
                height: 30px;
                position: absolute;
                z-index: 0;
-               margin-left: 1275px;
+               margin-left: 1300px;
                margin-top: -40px;
    				a{
    					text-decoration: none;
@@ -649,7 +648,7 @@ main{
 			font-size: 40px;
 		   padding: 0px 15px 0px 10px;
 		   font-family: "Caveat";
-		   margin-left: 1250px;
+		   margin-left: 1180px;
 		   margin-top: -90px;
 		   position: absolute;
          z-index: 0;
@@ -678,7 +677,7 @@ main{
 			font-size: 40px;
 		   padding: 0px 15px 0px 10px;
 		   font-family: "Caveat";
-		   margin-left: 1375px;
+		   margin-left: 1335px;
 		   margin-top: -95px;
 		   position: absolute;
          z-index: 0;
@@ -724,7 +723,7 @@ main{
 			  display: none;
 			}
 			.block_and:hover .and:after {
-			  content: "#acquise:V er de terre de bibliothèque";
+			  content: "#получен навык: Супер книжный червь";
 			}	
 
    		.amail{
@@ -743,7 +742,7 @@ main{
 footer {
   background-color: #282323;
   height: 500px;
-  margin-top: 490px;
+  margin-top: 470px;
   position: absolute;
   width: 1688px;
 }
@@ -765,14 +764,9 @@ footer .text .block_menu li {
 footer .text .block_menu li .help {
   padding-right: 220px;
 }
-footer .text .block_menu li .menu1 {
-  padding-left: 90px;
-}
 footer .text .block_menu li .contacts {
-  padding-left: 150px;
-}
-footer .text .block_menu li .languages {
-  padding-left: 120px;
+  padding-left: 160px;
+  padding-right: 200px;
 }
 footer .text .block_menu li a {
   text-decoration: none;
@@ -799,7 +793,7 @@ footer .text .block_for_help a:hover {
   transition: margin-left 1s;
 }
 footer .text .block_for_menu {
-  margin-left: 615px;
+  margin-left: 590px;
   margin-top: -360px;
   font-family: "Raleway";
   font-size: 20px;
@@ -822,7 +816,7 @@ footer .text .block_for_adress .adress {
   color: white;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 855px;
+  margin-left: 830px;
   margin-top: -320px;
 }
 footer .text .block_for_adress .adress a {
@@ -838,7 +832,7 @@ footer .text .block_for_adress .amail {
   margin-top: 30px;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 925px;
+  margin-left: 899px;
 }
 footer .text .block_for_adress .amail a {
   text-decoration: none;
@@ -855,14 +849,14 @@ footer .text .block_with_img_link {
 }
 footer .text .block_with_img_link .instagram {
   width: 50px;
-  margin-left: 930px;
+  margin-left: 920px;
   margin-top: 50px;
   margin-right: 20px;
   position: absolute;
 }
 footer .text .block_with_img_link .facebook {
   width: 50px;
-  margin-left: 1025px;
+  margin-left: 1010px;
   margin-top: 50px;
   position: absolute;
 }
@@ -870,19 +864,19 @@ footer .text .block_with_img_link .telega {
   width: 50px;
   position: absolute;
   margin-top: 50px;
-  margin-left: 1105px;
+  margin-left: 1090px;
 }
 footer .text .block_with_img_link .gmail_youtube .gmail {
   width: 110px;
   margin-top: 120px;
-  margin-left: 945px;
+  margin-left: 934px;
   position: absolute;
 }
 footer .text .block_with_img_link .gmail_youtube .youtube {
   width: 80px;
   position: absolute;
   margin-top: 125px;
-  margin-left: 1055px;
+  margin-left: 1040px;
 }
 footer .text .block_with_img {
   position: absolute;
@@ -994,7 +988,7 @@ footer .back-to-top-btn{
 footer .back-to-top-btn:focus{
   border: none;
 }
-footer .back-to-top-btn .photo{
+footer .back-to-top-btn img {
   margin-top: -150px;
   height: 80px;
   position: absolute;
